--- a/WebContent/admin/cliente/cadastroCliente.xhtml
+++ b/WebContent/admin/cliente/cadastroCliente.xhtml
@@ -5,24 +5,22 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui" xml:lang="pt-BR" lang="pt-BR"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-	<h:form>
 	<p:panel header="Dados Cliente" id="panelDadosCliente">
 		<h:messages />
 		<h:panelGrid columns="2">
 			<h:outputLabel value="Nome: " for="clienteNome" />
-			<h:inputText id="clienteNome" value="#{cadastroClienteMB.cliente.nome}" required="true" requiredMessage="O campo nome é obrigatório"/>
+			<p:inputText id="clienteNome" value="#{cadastroClienteMB.cliente.nome}" required="true" requiredMessage="O campo nome é obrigatório"/>
 			<h:outputLabel value="Email: " for="clienteEmail" />
-			<h:inputText id="clienteEmail" value="#{cadastroClienteMB.cliente.email}" />
+			<p:inputText id="clienteEmail" value="#{cadastroClienteMB.cliente.email}" />
 		</h:panelGrid>
-		<ui:repeat var="telefone" value="#{cadastroClienteMB.cliente.listaTelefones}">
-		<h:panelGrid columns="2">
-			<h:outputLabel value="Telefone: " for="clienteTelefone" />
-			<h:inputText id="clienteEmail" value="#{telefone.numero}" />
-		</h:panelGrid>
+		<ui:repeat varStatus="loop" var="telefone" value="#{cadastroClienteMB.cliente.listaTelefones}">
+			<h:panelGrid columns="2">
+				<h:outputLabel value="Telefone: " />
+				<p:inputText value="#{cadastroClienteMB.cliente.listaTelefones[loop.index].numero}" readonly="#{!empty cadastroClienteMB.cliente.listaTelefones[loop.index].numero}"/>
+			</h:panelGrid>
 		</ui:repeat>
 		<p:commandButton value="+ 1" actionListener="#{cadastroClienteMB.adicionarMaisUmTelefone()}" immediate="true" update="panelDadosCliente" ajax="true"/>
-		<p:commandButton value="Salvar Cliente" process="panelDadosCliente" update="panelDadosCliente" actionListener="#{cadastroClienteMB.salvarCliente()}" ajax="true"/>
+		<p:commandButton value="Salvar Cliente" process="panelDadosCliente" actionListener="#{cadastroClienteMB.salvarCliente()}" ajax="true"/>
 	</p:panel>
-</h:form>
 </html>
 
