--- a/WebContent/admin/mesaLoja/selecionaMesa.xhtml
+++ b/WebContent/admin/mesaLoja/selecionaMesa.xhtml
@@ -10,25 +10,23 @@
 	
 
 		<h:messages />
-		
-<p:dataTable id="checkboxDT" var="car" value="#{mesaLojaMB.listaMesaLoja}" selection="#{mesaLojaMB.mesaSelecionada}" rowKey="#{car.id}" style="margin-bottom:0">
+		<p:panel id="panelSelecionarMesas">
+<p:dataTable id="checkboxDT" var="car" value="#{mesaLojaMB.listaMesaLoja}" selection="#{mesaLojaMB.mesaSelecionada}" rowKey="#{car.id}" style="margin-bottom:0" >
         <f:facet name="header">
             Mesas
         </f:facet>
-       <!--  <p:column selectionMode="multiple" style="width:16px;text-align:center"/> -->
+        <p:column selectionMode="multiple" style="width:16px;text-align:center"/> 
         <p:column headerText="Id">
             <h:outputText value="#{car.id}" />
         </p:column>
-        <p:column headerText="Year">
+        <p:column headerText="Descrção">
             <h:outputText value="#{car.descricao}" />
         </p:column>
        
     </p:dataTable>		
 		
-	
-	
-	
-	
+<p:commandButton value="Salvar Forma de Pagamento" process="panelSelecionarMesas"  actionListener="#{cadastroPedidoMB.adicionaMesas(mesaLojaMB.mesaSelecionada)}" ajax="true"/>
+	</p:panel>
 	
 	
 </html>
