--- a/WebContent/admin/pedido/modalFinal.xhtml
+++ b/WebContent/admin/pedido/modalFinal.xhtml
@@ -5,8 +5,13 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui" xml:lang="pt-BR" lang="pt-BR"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-
-
-
+	<p:panel header="Pedido" id="panelPedidoFinal">
+		<h:messages />
+		<h:panelGrid columns="2">
+		<p:outputLabel value=" Pedido processado" />
+	</h:panelGrid>
+		<p:commandButton value=" Finalizar " process="panelPedidoFinal" update="panelPedidoFinal" actionListener="#{cadastroPedidoMB.finalizaPedido}" ajax="true"/>
+	</p:panel>
 
 </html>
+
