--- a/WebContent/admin/pedido/cadastroPedido.xhtml
+++ b/WebContent/admin/pedido/cadastroPedido.xhtml
@@ -13,7 +13,7 @@
 
 	<ui:composition template="/commonLayout.xhtml"> 
 		<ui:define name="content">
-			
+			#{cadastroPedidoMB.init()}
 			<h:form id="principal">
 			<p:messages id="messages" autoUpdate="true" closable="true" />
 			<ui:debug hotkey="x" />
