ajustando bugs primefaces

--- a/WebContent/admin/caixa/valeFuncionario.xhtml
+++ b/WebContent/admin/caixa/valeFuncionario.xhtml
@@ -100,7 +100,7 @@
                         </h:commandLink>
                          - 
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{valeFuncionarioMB.vale}"  value="#{vale}"  />
                         </p:commandLink>
 					
