--- a/WebContent/admin/receita.xhtml
+++ b/WebContent/admin/receita.xhtml
@@ -55,7 +55,7 @@
 				</p:column>
 				<p:column headerText="Ação" >
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{receitaMB.receita}"  value="#{r}"  />
                         </p:commandLink>
 					
