--- a/WebContent/admin/caixa/diariaFuncionario.xhtml
+++ b/WebContent/admin/caixa/diariaFuncionario.xhtml
@@ -88,7 +88,7 @@
                         </h:commandLink>
                          - 
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{diariaFuncionarioMB.diaria}"  value="#{diaria}"  />
                         </p:commandLink>
 					
