--- a/WebContent/admin/caixa/fecharCaixaManual.xhtml
+++ b/WebContent/admin/caixa/fecharCaixaManual.xhtml
@@ -110,7 +110,7 @@
 		 
 		 <p:column headerText="Ação" >
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{fechamentocaixaMB.fechamentocaixa}"  value="#{fechamento}"  />
                         </p:commandLink>
 					
