--- a/WebContent/admin/caixa/manterQuilometragem.xhtml
+++ b/WebContent/admin/caixa/manterQuilometragem.xhtml
@@ -94,7 +94,7 @@
                         </h:commandLink>
                          - 
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{quilometragemBoyMB.kmBoy}"  value="#{km}"  />
                         </p:commandLink>
 					
