--- a/WebContent/admin/caixa/manterTipoGastos.xhtml
+++ b/WebContent/admin/caixa/manterTipoGastos.xhtml
@@ -35,7 +35,7 @@
 					</p:column>
 					<p:column headerText="Ação">
 						<p:commandLink title="Excluir" update=":formExcluir:Excluir"
-							oncomplete="confirmation.show()" immediate="true" value="excluir">
+							oncomplete="PF('confirmation').show()" immediate="true" value="excluir">
 							<f:setPropertyActionListener target="#{tipoGastoMB.tipoGasto}" value="#{gastos}" />
 						</p:commandLink>
 
