--- a/WebContent/admin/emitirAdvertecia.xhtml
+++ b/WebContent/admin/emitirAdvertecia.xhtml
@@ -89,7 +89,7 @@
                                 <f:setPropertyActionListener target="#{advertenciaMB.adv}"  value="#{adv}"  />
                         </h:commandLink>
                          - 
-					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"  oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"  oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{advertenciaMB.adv}"  value="#{adv}"  />
                         </p:commandLink>
 					
