--- a/WebContent/admin/manterCargos.xhtml
+++ b/WebContent/admin/manterCargos.xhtml
@@ -45,7 +45,7 @@
 		 </p:column>
 		 <p:column headerText="Ação" >
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{cargoMB.cargo}"  value="#{cargo}"  />
                         </p:commandLink>
 					
