--- a/WebContent/admin/manterLoja.xhtml
+++ b/WebContent/admin/manterLoja.xhtml
@@ -42,7 +42,7 @@
 		 </p:column>
 		 <p:column headerText="Ação" >
 					 <p:commandLink title="Excluir" update=":formExcluir:Excluir"
-                                oncomplete="confirmation.show()" immediate="true" value="excluir" >                                                    
+                                oncomplete="PF('confirmation').show()" immediate="true" value="excluir" >                                                    
                                 <f:setPropertyActionListener target="#{lojaMB.loja}"  value="#{loja}"  />
                         </p:commandLink>
 					
