--- a/WebContent/admin/controleAcesso/manterResponsavel.xhtml
+++ b/WebContent/admin/controleAcesso/manterResponsavel.xhtml
@@ -143,12 +143,12 @@
 					<p:commandButton id="confirm" value="Sim"
 						actionListener="#{usuarioMB.remover()}"
 						update=":principal:listaUsuario"
-						oncomplete="confirmation.hide()" />
+						oncomplete="PF('confirmation').hide()" />
                 
                  &nbsp;
                  
                 <p:commandButton id="decline" value="Não"
-						onclick="confirmation.hide()" type="button" />
+						onclick="PF('confirmation').hide()" type="button" />
 
 				</p:dialog>
 
